<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header_usermenu"

    >


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lodge"
            android:icon="@drawable/catergory"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_Traveling"
            android:icon="@drawable/adver"
            android:title="@string/advertisement" />
        <item
            android:id="@+id/nav_Restaurants"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_Hospitals"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us" />
    </group>



        <item android:title="General">
            <menu>
                <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_rateus"
                    android:icon="@drawable/ic_rate_review_black_24dp"
                    android:title="@string/menu_Rateus" />
                <item
                    android:id="@+id/nav_logoout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />

                </group>
            </menu>


        </item>



</menu>
