<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/Image_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        android:layout_above="@id/Uname">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Uname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_centerHorizontal="true"

        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
