<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            app:srcCompat="@drawable/travel_me" />


        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="9dp"
            android:layout_toStartOf="@+id/imageView5"
            android:layout_toLeftOf="@+id/imageView5"
            android:gravity="center"
            android:padding="4dp"
            app:srcCompat="@drawable/symbol_71__1" />

        <!--username-->

        <ImageView
            android:id="@+id/emailimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rectangle_242"


            tools:ignore="ContentDescription" />
        <!--Yourmail.example.com-->

        <ImageView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rectangle_242"


            />

        <!--password-->

        <ImageView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailimg"
            android:layout_centerInParent="true"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rectangle_242" />

        <!--Email-->

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:ems="10"
            android:hint="@string/yourmail"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/usernametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernametext"
            android:layout_centerInParent="true"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/pas_dots"
            android:inputType="textPassword"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_241"
            android:gravity="center"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/register"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="242dp"
            android:layout_marginRight="242dp"
            android:gravity="center"
            app:srcCompat="@drawable/register_to_your_account" />

        <ImageView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="91dp"
            android:layout_marginLeft="91dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            app:srcCompat="@drawable/already_a_member_sign_in_here" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

