<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_usermenu"
        app:menu="@menu/activity_usermenu_drawer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--back-arrow-->
            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="52dp"
                android:gravity="center"
                android:padding="4dp"
                app:srcCompat="@drawable/menu_burger" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                app:srcCompat="@drawable/travel_me" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="409dp"
                    android:layout_height="175dp"

                    android:layout_marginTop="75dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/text_lodge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/image_lodge"
                                android:layout_centerHorizontal="true"
                                android:scrollHorizontally="false"
                                android:text="@string/category"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/image_lodge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="false"
                                app:srcCompat="@drawable/category" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"

                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp"

                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/text_map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/image_map"
                                android:layout_centerHorizontal="true"
                                android:scrollHorizontally="false"
                                android:text="@string/menu_map"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/image_map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="false"
                                app:srcCompat="@drawable/map_new" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="409dp"
                    android:layout_height="175dp"

                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/text_Traveling"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/image_Traveling"
                                android:layout_centerHorizontal="true"
                                android:scrollHorizontally="false"
                                android:text="@string/advertisement"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/image_Traveling"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="false"
                                app:srcCompat="@drawable/addver" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"

                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp"

                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/text_Restaurants"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/image_Restaurants"
                                android:layout_centerHorizontal="true"
                                android:scrollHorizontally="false"
                                android:text="@string/gallery"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/image_Restaurants"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="false"
                                app:srcCompat="@drawable/gallery" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!---->
                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="409dp"
                    android:layout_height="175dp"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/text_Hospital"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/image_Hospital"
                                android:layout_centerHorizontal="true"
                                android:scrollHorizontally="false"
                                android:text="@string/contact_us"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/image_Hospital"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="false"
                                app:srcCompat="@drawable/contact" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"

                        android:layout_weight="1"

                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp"

                        >


                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
